DRDT-128: z-index fix on video hub also moving from ready to load event

--- a/web/wp-content/themes/bumblebee/sass/header/_header.scss
+++ b/web/wp-content/themes/bumblebee/sass/header/_header.scss
@@ -2,7 +2,7 @@
 body.logged-in {
 	.header .main-navigation.sticky {
 		top: 32px;
-
+		z-index: 2;
 		@media screen and (max-width: 767px) {
 			top: 46px;
 		}
